@@ -1,107 +1,36 @@
 package NFS::Watchdog;
 
+#
+#  Author: Otavio Fernandes <otaviof@gmail.com>
+# Created: 03/30/2010 16:06:14
+#
+
 use warnings;
 use strict;
 
-=head1 NAME
-
-NFS::Watchdog - The great new NFS::Watchdog!
-
-=head1 VERSION
-
-Version 0.01
-
-=cut
-
 our $VERSION = '0.01';
 
+use Moose;
+use AnyEvent;
 
-=head1 SYNOPSIS
+has 'nfs_dir' => (
+    is       => 'rw',
+    isa      => 'Str',
+    required => 1,
+    trigger  => sub {
+        my ( $self, $dir ) = @_;
+        my $opendir_ready = AnyEvent->condvar;
+        my $opendir       = AnyEvent->io(
+            fh   => $dir,
+            poll => "r",
+            cb   => sub { $opendir_ready->send; }
+        );
+        sleep 2 and undef $opendir_ready;
+        return if ( !$opendir );
+        return 1;
+    },
+);
 
-Quick summary of what the module does.
+1;
 
-Perhaps a little code snippet.
-
-    use NFS::Watchdog;
-
-    my $foo = NFS::Watchdog->new();
-    ...
-
-=head1 EXPORT
-
-A list of functions that can be exported.  You can delete this section
-if you don't export anything, such as for a purely object-oriented module.
-
-=head1 FUNCTIONS
-
-=head2 function1
-
-=cut
-
-sub function1 {
-}
-
-=head2 function2
-
-=cut
-
-sub function2 {
-}
-
-=head1 AUTHOR
-
-Otavio Fernandes, C<< <otaviof at gmail.com> >>
-
-=head1 BUGS
-
-Please report any bugs or feature requests to C<bug-nfs-watchdog at rt.cpan.org>, or through
-the web interface at L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=NFS-Watchdog>.  I will be notified, and then you'll
-automatically be notified of progress on your bug as I make changes.
-
-
-
-
-=head1 SUPPORT
-
-You can find documentation for this module with the perldoc command.
-
-    perldoc NFS::Watchdog
-
-
-You can also look for information at:
-
-=over 4
-
-=item * RT: CPAN's request tracker
-
-L<http://rt.cpan.org/NoAuth/Bugs.html?Dist=NFS-Watchdog>
-
-=item * AnnoCPAN: Annotated CPAN documentation
-
-L<http://annocpan.org/dist/NFS-Watchdog>
-
-=item * CPAN Ratings
-
-L<http://cpanratings.perl.org/d/NFS-Watchdog>
-
-=item * Search CPAN
-
-L<http://search.cpan.org/dist/NFS-Watchdog/>
-
-=back
-
-
-=head1 ACKNOWLEDGEMENTS
-
-
-=head1 COPYRIGHT & LICENSE
-
-Copyright 2010 Otavio Fernandes, all rights reserved.
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
-
-
-=cut
-
-1; # End of NFS::Watchdog
+__END__
