@@ -1,3 +1,10 @@
+commit: fe0fa2449d1b67d0cc1fe2358ca5e1e49325a960
+Author: Mon Mar 29 23:44:19 2010 -0300
+  Date: Otávio Fernandes <otaviof@gmail.com>
+
+	adding a little test
+
+
 commit: 457069c29dcc55166c049ae1fb126bd4e383c32d
 Author: Mon Mar 29 15:25:04 2010 -0300
   Date: Otávio Fernandes <otaviof@gmail.com>
